2007-12-22  Brian Warner  <warner@lothar.com>

	* buildbot/steps/shell.py (WarningCountingShellCommand): utility
	subclass which uses a regular expression to count warning messages
	in the output. This also puts warning messages in a new 'warnings'
	logfile, sets the 'warnings-count' build property with the total
	count, and marks the step results as WARNINGS if there are any
	warnings. Thanks to Roch Gadsdon (rochg) for the patch. Closes
	#74.
	(Compile): derive from WarningCountingShellCommand
	(Test): same
	* docs/buildbot.texinfo (Compile): document it
	* buildbot/test/test_steps.py (Warnings): test it

	* buildbot/slave/commands.py (ShellCommand._chunkForSend): don't
	send more than 128kB of stdout/stderr/logfile text in a single PB
	string, since PB has a hardwired limit of 640kB. This should fix
	crashes that occur when the test process generates output very
	very quickly. Patch by chops@demiurgestudios.com, thanks! I
	haven't been able to reproduce this locally, but the potential bug
	is clear. This should close #129.

2007-12-21  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/startup.py (start): check to see if there's a
	buildbot.tac before doing anything else. This improves the error
	message when you do 'buildbot start' in the wrong directory.

	* buildbot/scripts/logwatcher.py (LogWatcher.start): rewrite to
	spawn /usr/bin/tail to follow the target's twistd.log . It turns
	out that OS-X file EOF semantics are different, and the naive
	read-then-read-again approach I was using doesn't work (the first
	EOF we hit is sticky). tail gets it right, so rely upon it instead
	of reimplementing the wheel. This should make 'buildbot start'
	correctly follow the logfile on OS-X, thus closing #141.

2007-12-14  Brian Warner  <warner@lothar.com>

	* buildbot/steps/shell.py (ShellCommand.__init__): stash the
	RemoteShellCommands args too, so things like 'workdir' and 'env'
	and 'timeout' are preserved. This ought to fix #150.